# duckport-rs

./: .gitignore  Cargo.toml  README.md  deploy.md  deploy.sh  duckport  extra-enhancement.md  ingestor-dev-guide.md  install.sh  loadhist.md  migration-guide.md  roadmap.md
.github/workflows/: release.yml
client/: pyproject.toml
client/duckport_consumer/: __init__.py  client.py  resample.py
crates/airport/: Cargo.toml  README.md
crates/airport/examples/auth/src/: main.rs
crates/airport/examples/basic/src/: main.rs
crates/airport/examples/unified/src/: main.rs
crates/airport/scripts/: package-all.sh  package-linux.sh  package-macos.sh
crates/airport/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  multicatalog.rs  server.rs
crates/airport/src/auth/: bearer.rs  mod.rs
crates/airport/src/catalog/: dynamic.rs  function.rs  geometry.rs  mod.rs  static_catalog.rs  table.rs  tableref.rs  transaction.rs  types.rs
crates/airport/src/filter/: mod.rs  parse.rs  types.rs
crates/airport/src/flight/: context.rs  do_action.rs  do_action_ddl.rs  do_action_functions.rs  do_action_metadata.rs  do_action_statistics.rs  do_exchange.rs  do_exchange_dml.rs  do_exchange_functions.rs  do_get.rs  do_put.rs  errors.rs  flight_data_decoder.rs  get_flight_info.rs  interceptor.rs  list_flights.rs  mod.rs  multicatalog.rs  projection.rs  server.rs  ticket.rs  transaction.rs
crates/airport/src/internal/: mod.rs  msgpack.rs  serialize.rs
crates/duckport-server/: Cargo.toml
crates/duckport-server/src/: config.rs  main.rs  retention.rs
crates/duckport-server/src/airport_adapter/: catalog.rs  mod.rs  schema.rs  table.rs
crates/duckport-server/src/backend/: mod.rs
crates/duckport-server/src/write_plane/: actions.rs  mod.rs  proto.rs  put.rs  query.rs
ingestor/: config.env  config.env.example  pyproject.toml  registry.json  start_ingestor.py
ingestor/binance_ingestor/: bus.py  config.py  data_jobs.py  duckport_client.py  filter_symbol.py  loadhist.py  main.py
ingestor/binance_ingestor/api/: binance_market_restful.py  binance_market_ws.py  exceptions.py  restful_basics.py  ws_basics.py
ingestor/binance_ingestor/component/: candle_fetcher.py  candle_listener.py
ingestor/binance_ingestor/hist/: __init__.py  data_lister.py  downloader.py  file_manager.py  symbol_manager.py
ingestor/binance_ingestor/utils/: date_partition.py  digit.py  log_kit.py  network.py  time.py  timer.py
tests/python/: test_consumer_read.py  test_loadhist.py  test_phase1_airport_read.py  test_phase2a_write_plane.py  test_phase2b_append.py  test_phase4_ingestor.py
